# rawmidi_csound

./: .gitignore  .test.csd.swp  .wpz_test.csd.swp  CMakeLists.txt  CMakeLists.txt.autosave  README.md  TODO.md  matrix_test.csd  newtest.csd  rawmidi.cpp  risset.json  test.cpp  test.csd  wpz_test.csd
erae_def_test/: analyze.rb  data_big_x.txt  data_x.txt  data_y.txt  data_z.txt
tests/: newtest.csd  sysex_compose.csd  test.csd
